==> tdwebste/chibios_sandbox/sandbox/ChibiOS-RT/os/hal/platforms/SPC5xx/DSPI_v1/spi_lld.c <==
#include "ch.h"
#include "hal.h"
#define DSPI_PUSHR_EXCLUDED_BITS    (SPC5_PUSHR_CTAS_MASK   |               \
                                     SPC5_PUSHR_EOQ         |               \
                                     SPC5_PUSHR_TXDATA_MASK)
#define DSPI_POPR8_ADDRESS(spip)    (((uint32_t)&(spip)->dspi->POPR.R) + 3)
#define DSPI_POPR16_ADDRESS(spip)   (((uint32_t)&(spip)->dspi->POPR.R) + 2)

void spi_lld_start(SPIDriver *spip) {

  chDbgAssert((spip->config->pushr & DSPI_PUSHR_EXCLUDED_BITS) == 0,
              "spi_lld_start(), #1", "invalid PUSHR bits specified");

  if (spip->state == SPI_STOP) {
    /* Enables the peripheral.*/

#if SPC5_SPI_USE_DSPI0
    if (&SPID1 == spip) {
      spip->tx1_channel = edmaChannelAllocate(&spi_dspi0_tx1_dma_config);
      spip->tx2_channel = edmaChannelAllocate(&spi_dspi0_tx2_dma_config);
      spip->rx_channel = edmaChannelAllocate(&spi_dspi0_rx_dma_config);
    }
#endif /* SPC5_SPI_USE_DSPI0 */

#if SPC5_SPI_USE_DSPI1
    if (&SPID2 == spip) {
      spip->tx1_channel = edmaChannelAllocate(&spi_dspi1_tx1_dma_config);
      spip->tx2_channel = edmaChannelAllocate(&spi_dspi1_tx2_dma_config);
      spip->rx_channel = edmaChannelAllocate(&spi_dspi1_rx_dma_config);
    }
#endif /* SPC5_SPI_USE_DSPI1 */

#if SPC5_SPI_USE_DSPI2
    if (&SPID3 == spip) {
      spip->tx1_channel = edmaChannelAllocate(&spi_dspi2_tx1_dma_config);
      spip->tx2_channel = edmaChannelAllocate(&spi_dspi2_tx2_dma_config);
      spip->rx_channel = edmaChannelAllocate(&spi_dspi2_rx_dma_config);
    }
#endif /* SPC5_SPI_USE_DSPI2 */

#if SPC5_SPI_USE_DSPI3
    if (&SPID4 == spip) {
      spip->tx1_channel = edmaChannelAllocate(&spi_dspi3_tx1_dma_config);
      spip->tx2_channel = edmaChannelAllocate(&spi_dspi3_tx2_dma_config);
      spip->rx_channel = edmaChannelAllocate(&spi_dspi3_rx_dma_config);
    }
#endif /* SPC5_SPI_USE_DSPI3 */

#if SPC5_SPI_USE_DSPI4
    if (&SPID5 == spip) {
      spip->tx1_channel = edmaChannelAllocate(&spi_dspi4_tx1_dma_config);
      spip->tx2_channel = edmaChannelAllocate(&spi_dspi4_tx2_dma_config);
      spip->rx_channel = edmaChannelAllocate(&spi_dspi4_rx_dma_config);
    }
#endif /* SPC5_SPI_USE_DSPI5 */

    chDbgAssert((spip->tx1_channel != EDMA_ERROR) &&
                (spip->tx2_channel != EDMA_ERROR) &&
                (spip->rx_channel != EDMA_ERROR),
                "spi_lld_start(), #2", "channel cannot be allocated");
  }

  /* Configures the peripheral.*/
  spip->dspi->MCR.B.MDIS = 0;
  spip->dspi->CTAR[0].R  = spip->config->ctar0;
  spip->dspi->RSER.R     = SPC5_RSER_TFFF_RE | SPC5_RSER_TFFF_DIRS |
                           SPC5_RSER_RFDF_RE | SPC5_RSER_RFDF_DIRS;
  spip->dspi->SR.R       = spip->dspi->SR.R;
}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state == SPI_READY) {
    /* Releases the allocated EDMA channels.*/
    edmaChannelRelease(spip->tx1_channel);
    edmaChannelRelease(spip->tx2_channel);
    edmaChannelRelease(spip->rx_channel);

    /* Resets the peripheral.*/
    spip->dspi->CTAR[0].R  = 0;
    spip->dspi->RSER.R     = 0;
    spip->dspi->SR.R       = spip->dspi->SR.R;
    spip->dspi->MCR.R     |= SPC5_MCR_HALT |
                             SPC5_MCR_CLR_TXF | SPC5_MCR_CLR_RXF;
    spip->dspi->MCR.B.MDIS = 1;
  }
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {
  uint32_t popr;

  spip->dspi->MCR.B.HALT = 0;
  spip->dspi->PUSHR.R = (SPC5_PUSHR_EOQ | spip->config->pushr |
                         (uint32_t)frame) & ~SPC5_PUSHR_CONT;
  while (!spip->dspi->SR.B.RFDF)
    ;
  popr = spip->dspi->POPR.R;
  spip->dspi->MCR.B.HALT = 1;
  return (uint16_t)popr;
}
